--- a/index3.html
+++ b/index3.html
@@ -1391,7 +1391,7 @@
                             <span class="project-tag">Themes</span>
                             <span class="project-tag">Templates</span>
                         </div>
-                        <a href="https://themeforest.net" target="_blank" class="btn"><i
+                        <a href="https://theme t" target="_blank" class="btn"><i
                                 class="fas fa-external-link-alt"></i> View Live Website</a>
                     </div>
                 </div>
@@ -1657,5 +1657,6 @@
 
 
 </html>
+
 
 
